--- a/css/reflexion.css
+++ b/css/reflexion.css
@@ -10,28 +10,26 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-
 .main {
   margin: 0 auto;
-  width: 80vw;
+  max-width: 80vw;
   height: 80vh;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   align-items: center;
   gap: 2em;
 }
 
 h1 {
   font-size: 3em;
+  color: #af2739;
 }
-
 
 .about {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   width: 100vw;
   align-items: center;
-  
 }
 
 .about img {
@@ -45,9 +43,9 @@ h1 {
 }
 
 .about-info h2 {
-  font-size: 2em;
+  font-size: 2.5em;
   color: #191c32;
-  font-size: 40px;
+  font-weight: 700;
 }
 
 .divider {
@@ -60,21 +58,19 @@ h1 {
 
 .about p {
   margin-bottom: 1em;
-  font-size: 25px;
-  font-weight: 500;
+  font-size: 1.2em;
+  line-height: 1.5;
   text-align: justify;
 }
 
 @media (max-width: 900px) {
-    .about {
-      grid-template-columns: 1fr;
-    }
-    .about img {
-        grid-column: auto;
-      }
+  .about {
+    grid-template-columns: 1fr;
   }
- 
-  
+  .about img {
+    grid-column: auto;
+  }
+}
 
 .footer {
   display: flex;
@@ -85,11 +81,13 @@ h1 {
   height: 200px;
   padding: 2em;
   background-color: #789;
+  color: #fff;
 }
 
 .footer-content h2 {
   font-size: 3em;
-  color: #191c32;
+  color: #193232;
+  font-weight: 700;
 }
 
 .footer-content h5 {
@@ -98,47 +96,31 @@ h1 {
   color: #191c32;
 }
 
+/* Para volver */
 
-.footer {
-  display: flex;
-  flex-direction: column;
+.regreso {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  position: absolute;
   justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 200px;
-  padding: 2em;
-  background-color: #789;
+  margin-top: 45px;
+  font-size: 1.2em;
+  text-align: right;
+  margin-right: 150px;
+  font-weight: 700;
 }
 
-.footer-content h2 {
-  font-size: 3em;
+a {
+  text-decoration: none;
+  color: #567;
+  font-weight: 700;
 }
 
-.footer-content h5 {
-  font-size: 1.5em;
-  text-align: center;
+.preguntas_reflex {
+  font-weight: bold;
+  color:#5d68bc;
+
 }
 
- /* Para volver*/
-
-.regreso{
-
-    width: 100%;
-    height: 100%;
-     top: 0;
-     right: 0;
-     position: absolute;
-     justify-content: center;
-    margin-top: 45px;
-    font-size: 20px;
-    text-align: right;
-    margin-right: 150px;
-    font-weight: 700;
-    
-   }
-
-   a{
-
-    text-decoration: none;
-    color: #567;
-   }
